--- a/NCD HTML forms/NCD Diabetes EXAM LABORATORY TEST.html
+++ b/NCD HTML forms/NCD Diabetes EXAM LABORATORY TEST.html
@@ -157,7 +157,7 @@
         </tr>
     </table>
 
-    <section headerLabel=" MedicationExam" >
+    <section headerLabel="EXAM LABORATORY TEST" >
         <table border="1" width="100%">
             <tr>
                 <td><strong>Exam</strong></td>
@@ -173,7 +173,7 @@
                 <td>Annual</td>
                 <td>Annual</td>
                 <td>Quarterly</td>
-                <td>Every 3 years</td>
+                <td>Every 1 years</td>
             </tr>
             <tr>
                 <td><strong>Baseline</strong></td>
