--- a/NCD HTML forms/NCD HF_HTN_CKD  Echochardiography.html
+++ b/NCD HTML forms/NCD HF_HTN_CKD  Echochardiography.html
@@ -198,6 +198,10 @@
         @HYPERTENSIVE_HEART_DISEASE@=fe7787ea-59ba-4427-b3df-62e9dc74d4a3
         @ACUTE_REHEUMATIC_FEVER@=006ab3b2-a0ea-45bf-b495-83e06f26f87a
         @PULMONARY_HYPERTENSION@=cadcbf7e-389b-4632-9f03-6df1aa74d15a
+        @SIZE_OF_VENTRICULAR_SEPTAL_DEFECT@ = e6919af8-e227-4a65-bad3-4a12fee424bd
+        @PEAK_GRADIENT_OF_VENTRICULAR_SEPTAL_DEFECT@ = eb154e9a-1821-474f-ac0d-123169e092f2
+        @PRIMUM@ = 04ac60cb-64e5-447b-ab83-84dd0230f83f
+        @SINUS_VENOUS@ = f52a4e50-eadd-41f8-91e1-a56169dba818
 
 
 
@@ -464,10 +468,14 @@
                                  answerLabel="Thrombus" style="checkbox" />
                             <obs conceptId="$@VENTRICULAR_FINDINGS@" answerConceptId="$@VENTRICULAR_SEPTAL_DEFECT@"
                                  answerLabel="VSD" style="checkbox" />
-                            <obs conceptId="$@VSD_RESTRICTIVE@" answerConceptId="$@YES@"
-                                 answerLabel="restrictive" style="checkbox" />
-                            <obs conceptId="$@VSD_RESTRICTIVE@" answerConceptId="$@NO@"
-                                 answerLabel="non-restrictive" style="checkbox" />
+
+                            <obs conceptId="$@SIZE_OF_VENTRICULAR_SEPTAL_DEFECT@"/> cm
+                            Pk Grad.
+                            <obs conceptId="$@PEAK_GRADIENT_OF_VENTRICULAR_SEPTAL_DEFECT@"/> mmHg
+                            <!--<obs conceptId="$@VSD_RESTRICTIVE@" answerConceptId="$@YES@"-->
+                                 <!--answerLabel="restrictive" style="checkbox" />-->
+                            <!--<obs conceptId="$@VSD_RESTRICTIVE@" answerConceptId="$@NO@"-->
+                                 <!--answerLabel="non-restrictive" style="checkbox" />-->
                             <obs conceptId="$@VENTRICULAR_FINDINGS@" answerConceptId="$@DYNAMIC_OUTFLOW_TRACT_OBSTRUCTION@"
                                  answerLabel="Dynamic Outflow Tract Obstruction" style="checkbox" />
                         </div>
@@ -518,7 +526,7 @@ Decreased" />
                              style="radio"
                              answerLabels="Normal, Small, Mildly Dilated, Moderately Dilated, Severely Dilated" /> <br />
                         <span class="indented"> ASD </span>
-                        <obs conceptId="$@ATRIAL_SEPTAL_DEFECT@" answerConceptIds="$@SECUNDUM@,3868,3869"
+                        <obs conceptId="$@ATRIAL_SEPTAL_DEFECT@" answerConceptIds="$@SECUNDUM@,$@PRIMUM@,$@SINUS_VENOUS@"
                              style="radio" answerLabels="Secundum, Primum, Sinus Venosus" />
                         <span class="indented"></span>
                         <obs conceptId="$@ATRIAL_SEPTAL_DEFECT_SIZE@" />
@@ -537,6 +545,14 @@ Decreased" />
                         <obs conceptId="$@CAVITY_SIZE@" answerConceptIds="$@NORMAL@,$@SMALL@,$@MILDLY_DILATED@,$@MODERATELY_DILATED@,$@SEVERELY_DILATED@"
                              style="radio"
                              answerLabels="Normal, Small, Mildly Dilated, Moderately Dilated, Severely Dilated" />
+                        <br/>
+                        <span class="indented"> ASD </span>
+                        <obs conceptId="$@ATRIAL_SEPTAL_DEFECT@" answerConceptIds="$@SECUNDUM@,3868,3869"
+                             style="radio" answerLabels="Secundum, Primum, Sinus Venosus" />
+                        <span class="indented"></span>
+                        <obs conceptId="$@ATRIAL_SEPTAL_DEFECT_SIZE@" />
+                        cm
+                        <span class="indented"></span>
                         <obs conceptId="$@ATRIAL_FINDINGS@" answerConceptId="$@THROMBUS@"
                              answerLabel="Thrombus" style="checkbox" />
                     </obsgroup>
