--- a/NCD HTML forms/NCD Asthma: other investigations.html
+++ b/NCD HTML forms/NCD Asthma: other investigations.html
@@ -11,6 +11,35 @@
         @OTHER_LAB_TEST_RESULT@ = 3ce1ca8a-26fe-102b-80cb-0017a47871b2
         @DATE_OF_LABORATORY_TEST@ = bbeb58d7-63ba-4d7b-ac5b-4f72d3985888
         @dates_group@ = b982a38b-9a3a-4445-b59d-f8d58fa58f47
+        @AFB_SPUTU_SMEAR@ = 3cda584a-26fe-102b-80cb-0017a47871b2
+        @POSITIVE@ = 3cd3a7a2-26fe-102b-80cb-0017a47871b2
+        @NEGATIVE@ = 3cd28732-26fe-102b-80cb-0017a47871b2
+        @UNKNOWN@ = 3cd6fac4-26fe-102b-80cb-0017a47871b2
+        @forced_vital_capacity@ = d8e7de46-d107-424d-a92e-289b61c991f8
+        @forced_expiratory_volume_in_one_second@ = 9a2c82fb-517a-4785-84e5-cb1f444c81c2
+        @FVC1_TO_FVC_ratio@ = da7bf1ef-7170-4a4b-98de-0ad186ef3671
+        @CHEST_XRAY@ = 3ccc6186-26fe-102b-80cb-0017a47871b2
+        @CHEST_XRAY@ = 3ccc6186-26fe-102b-80cb-0017a47871b2
+        @PULMONARY_EFFUSION@ = 3cd771ac-26fe-102b-80cb-0017a47871b2
+        @MILIARY_CHANGES@ = 3cd7733c-26fe-102b-80cb-0017a47871b2
+        @EVIDENCE_OF_CARDIAC_ENLARGEMENT@ = 3ce9d4be-26fe-102b-80cb-0017a47871b2
+        @INFILTRATE@ = 3cf2e4d2-26fe-102b-80cb-0017a47871b2
+        @DIFFUSE_NON-MILIARY_CHANGES@ = 3cf2e734-26fe-102b-80cb-0017a47871b2
+        @CAVITARY_LESION@ = 3cf2ebda-26fe-102b-80cb-0017a47871b2
+        @FIBROSIS@ = 3ce439be-26fe-102b-80cb-0017a47871b2
+        @LYMPHADENOPATHY@ = 3cce4c76-26fe-102b-80cb-0017a47871b2
+        @CAVITY@ = 3ce43842-26fe-102b-80cb-0017a47871b2
+        @PNEUMONOTHORAX@ = 3ce43b3a-26fe-102b-80cb-0017a47871b2
+        @INDETERMINATE@ = 3cd774d6-26fe-102b-80cb-0017a47871b2
+        @PNEUMOTHORAX@ = 3ce603a2-26fe-102b-80cb-0017a47871b2
+        @SEVERE@ = 3cdefc92-26fe-102b-80cb-0017a47871b2
+        @MODERATE@ = 3cdef832-26fe-102b-80cb-0017a47871b2
+        @A_LITTLE_BIT@ = 3cdf0106-26fe-102b-80cb-0017a47871b2
+        @LARGE@ = 1b8d3cfc-1a36-4a8e-8dbd-47da53a54bee
+        @SMALL@ = c01fdf9e-b32b-4f18-b1ee-97db3e7dbd78
+        @Xrays@ = 3723fd15-2e30-477d-9488-5cfd78bd790c
+        @NORMAL@ = 3cd750a0-26fe-102b-80cb-0017a47871b2
+        @OTHER_NON-CODED@ = 3cee7fb4-26fe-102b-80cb-0017a47871b2
     </macros>
     <style>
         th.tableHeader {
@@ -127,6 +156,34 @@
         }
         }
     </style>
+    <script type="text/javascript">
+        $j(document).ready(function() {
+
+            var ratio;
+            getField('fvc.value').change(function() {
+            var fvc = getValue("fvc.value");
+            var fev1 = getValue("fev1.value");
+            if(fvc!="" &amp;&amp; fev1!=""){
+                ratio = fev1/fvc
+                setValue('ratio.value',ratio);
+                //$j('#ratio').html(ratio);
+                //$j('#ratio').show();
+            }
+            });
+            getField('fev1.value').change(function() {
+            var fvc = getValue("fvc.value");
+            var fev1 = getValue("fev1.value");
+            if(fvc!="" &amp;&amp; fev1!=""){
+                ratio = fev1/fvc
+                setValue('ratio.value',ratio);
+                //$j('#ratio').html(ratio);
+                //$j('#ratio').show();
+            }
+            });
+
+
+        });
+    </script>
     <table cellspacing="0" cellpadding="6" width="100%">
         <tr>
             <td><img src="/openmrs/moduleResources/mohbilling/images/rwanda-logo.jpg" align="left"
@@ -161,19 +218,71 @@
                 <td>Date requested</td>
                 <td>Résultats / Results</td>
             </tr>
+
             <tr>
                 <td><strong>Crachats</strong><br/>/Sputum smear for AFB</td>
                 <obsgroup groupingConceptId="$@dates_group@">
                     <td><obs conceptId="$@DATE_OF_LABORATORY_TEST@" allowFutureDates="true"/></td>
                 </obsgroup>
-                <td><obs conceptId="$@AFB_results@" rows="2" cols="60" dateLabel="Date" showDate="true" allowFutureDates="true"/></td>
+                <td>
+                    <obs conceptId="$@AFB_SPUTU_SMEAR@" answerConceptIds="$@POSITIVE@,$@NEGATIVE@,$@UNKNOWN@"
+                         answerLabels="POSITIVE,NEGATIVE,UNKNOWN" style="radio" showDate="true" allowFutureDates="true"/>
+                    <!--
+                    <obs conceptId="$@AFB_results@" rows="2" cols="60" dateLabel="Date" showDate="true" allowFutureDates="true"/>
+                    -->
+                </td>
             </tr>
             <tr>
                 <td><strong>Cliche du thorax</strong>/CXR</td>
                 <obsgroup groupingConceptId="$@dates_group@">
                     <td><obs conceptId="$@DATE_OF_LABORATORY_TEST@" allowFutureDates="true"/></td>
                 </obsgroup>
-                <td><obs conceptId="$@CXR_Results@" rows="2" cols="60"  dateLabel="Date" showDate="true" allowFutureDates="true"/></td>
+                <td>
+                    <table border="1">
+                        <tr>
+                            <td>
+                                <obs conceptId="$@CHEST_XRAY@" answerConceptId="$@NORMAL@" answerLabel="NORMAL" style="radio"/>
+                            </td>
+                            <td>
+                                <obs conceptId="$@CHEST_XRAY@" answerConceptIds="$@PULMONARY_EFFUSION@,$@MILIARY_CHANGES@,
+                                                        $@EVIDENCE_OF_CARDIAC_ENLARGEMENT@,$@INFILTRATE@,$@DIFFUSE_NON-MILIARY_CHANGES@,$@CAVITARY_LESION@,
+                                                        $@FIBROSIS@,$@LYMPHADENOPATHY@,$@CAVITY@,$@PNEUMONOTHORAX@,$@INDETERMINATE@,$@PNEUMOTHORAX@,$@SEVERE@,
+                                                        $@MODERATE@,$@A_LITTLE_BIT@,$@LARGE@,$@SMALL@,$@UNKNOWN@,$@OTHER_NON-CODED@" style="radio"/>
+                                <obs conceptId="$@Xrays@"/>
+                            </td>
+
+                        </tr>
+                    </table>
+                    <!--
+                    <obs conceptId="$@CXR_Results@" rows="2" cols="60"  dateLabel="Date" showDate="true" allowFutureDates="true"/>
+                    -->
+                </td>
+
+            </tr>
+            <tr>
+
+                <td><strong>spirometry</strong></td>
+                <obsgroup groupingConceptId="$@dates_group@">
+                    <td><obs conceptId="$@DATE_OF_LABORATORY_TEST@" allowFutureDates="true"/></td>
+                </obsgroup>
+                <td>
+
+                    FVC :
+                    <obs conceptId="$@forced_vital_capacity@" id="fvc"/> % <br/>
+                    FEV1:
+                    <obs conceptId="$@forced_expiratory_volume_in_one_second@" id="fev1"/>% <br/>
+                    Ratio:
+                    <ifMode mode="ENTER">
+                    <obs conceptId="$@FVC1_TO_FVC_ratio@" id="ratio"/> FEV1/FVC
+                    </ifMode>
+                    <ifMode mode="VIEW">
+                        <obs conceptId="$@FVC1_TO_FVC_ratio@" id="ratio"/> FEV1/FVC
+                    </ifMode>
+                    <ifMode mode="EDIT">
+                        <obs conceptId="$@FVC1_TO_FVC_ratio@" id="ratio"/> FEV1/FVC
+                    </ifMode>
+                </td>
+
             </tr>
             <tr>
                 <td>
@@ -184,7 +293,7 @@
                 <obsgroup groupingConceptId="$@dates_group@">
                     <td><obs conceptId="$@DATE_OF_LABORATORY_TEST@" allowFutureDates="true"/></td>
                 </obsgroup>
-                <td><obs conceptId="$@OTHER_LAB_TEST_RESULT@" rows="2" cols="60" dateLabel="Date" showDate="true" allowFutureDates="true"/></td>Zz
+                <td><obs conceptId="$@OTHER_LAB_TEST_RESULT@" rows="2" cols="60" dateLabel="Date" showDate="true" allowFutureDates="true"/></td>
             </tr>
 
         </table>
