--- a/NCD HTML forms/Cause of Death Certificate.html
+++ b/NCD HTML forms/Cause of Death Certificate.html
@@ -32,6 +32,53 @@
         @War@ = 5a784e42-aafd-43a7-8545-3817236138c7
         @Not_determined@ = 09c8c10f-c3a6-41f8-ac91-55493ee008c6
         @Pending_investigation@ = db4a1249-19f6-4061-ae61-e2185a73d991
+        @external_cause_or_poisoning@ = 2fb7dc05-f4ec-43a4-baf0-fa74bafe7bca
+        @Date_of_injury@ = 6b4d1a39-4cfd-4e4d-81e9-f9563593ff33
+        @how_did_external_cause_occur@ = d6e64bf5-9214-4bed-ab12-dc2db1ce8a8a
+        @Place_of_occurrence_of_the_external_cause@ = 58ad311d-0c90-4317-afa3-5bcd3bbc5d70
+        @Home@ = e6969db3-6db8-493f-89a9-6b600724199b
+        @Residential_institution@ = 520d4d17-c82e-4884-954f-4ed1b4af9ca8
+        @School_other_institution_public_administrative_area@ = 2849c505-3c3c-45cd-8170-13ef3c6b36bd
+        @Sports_and_athletics_area@ = c247bac6-7a2d-46c7-8d4b-21d48c059026
+        @Street_and_highway@ = d0a0067c-b567-4a0c-96b3-f398c7dd4cff
+        @Trade_and_service_area@ = 7de09e40-8c82-484e-af14-d22b7755696f
+        @Industrial_and_construction_area@ = e92e98e9-bba1-4254-8802-22b03c4fffad
+        @Farm@ = 08a63911-9eac-49aa-833b-42f595d6f4f0
+        @Other_place@ = 95855c5b-bda5-4cc3-8124-3d149dc31ee4
+        @Multiple_pregnancy@= 5ffcc057-9e10-4e75-90ad-6a4abbe626fd
+        @Stillborn@= 2aef67d6-dc8d-4ac6-b860-4aae958b7bd4
+        @number_of_hours_survived@= 62f7e713-8b89-4dae-901e-4674e9cdde68
+        @completed_weeks_of_pregnancy@= 03625e77-893b-40aa-b9d1-83c11b676ef1
+        @Birth_weight@= 3cf15b3a-26fe-102b-80cb-0017a47871b2
+        @Age_of_mother@= be383e91-4174-4def-b258-477be6ab91ce
+        @conditions_of_mother_that_affected_the_fetus_and_new_born@= d0bb31af-6bb4-4ab0-a71b-b14eb5167de4
+        @deceased_pregnant?@= 1aacd5cb-b074-4832-ad42-3fa102ce2f2d
+        @time_of_pregnancy_in_relation_to_death@= cd0c02a6-7fba-4b0d-aab2-06eb768890e2
+        @at_time_of_death@= f578f379-ed99-4d2b-8c89-37bb6b05ae1d
+        @Between_43days_to_1_year_before_death@= 80220711-ee00-423f-ac11-f197ccd2774b
+        @within_42days_before_death@= dc23b6b3-54a0-4985-b2c3-44c9097219fa
+        @pregnancy_contribute_to_the_death?@= 3534cb58-24fd-4f33-857d-014a11840d03
+        @PARITY@= 3cd6dda0-26fe-102b-80cb-0017a47871b2
+        @TRANSFER_IN_FROM@= 3cda3efa-26fe-102b-80cb-0017a47871b2
+        @METHOD_OF_DELIVERY@= 3cee8c3e-26fe-102b-80cb-0017a47871b2
+        @SPONTANEOUS_VAGINAL_DELIVERY@= 3cd7af5a-26fe-102b-80cb-0017a47871b2
+        @CESAREAN_SECTION@= 3cd7b0ea-26fe-102b-80cb-0017a47871b2
+        @VACUUM_DELIVERY@= a104ed61-424c-472e-9220-5f50ee7e4828
+        @place_of_delivery@= 97718dbd-2cbe-421f-90c9-640ceb54e681
+        @home@=e6969db3-6db8-493f-89a9-6b600724199b
+        @Health_Facility_Coded_Answer@= 071a651b-9154-488b-a4f5-c1b79b379410
+        @In_transit@= 3477a358-cdbf-4414-9798-3683d7cae2ca
+        @delivered_by_skilled_attendant@=4b19ffac-ec9c-4e22-b971-804b29a3d781
+        @I_attended_the_deceased_before_death@ = 2d234766-d4ce-47a8-8ca8-4ce0c4c2be1e
+        @I_examined_the_body_after_death@ = 1c9bde31-e6a5-4022-8ba8-9931a8727f3b
+        @I_conducted_the_post_mortem_of_the_body@ = afaae40e-e653-4a19-8351-9b27ac05cf04
+        @OTHER_NON-CODED@ = 3cee7fb4-26fe-102b-80cb-0017a47871b2
+        @I_hereby_certify_that@ = 3bc6b989-4884-48b4-9acb-04f61a5493e5
+        @Other_that_i_certify@ = fc151a60-7196-45f2-a416-0463c1434c4e
+
+
+
+
 
         <!-- lookup uuids-->
 
@@ -283,30 +330,30 @@
 	</script>
     <table cellspacing="0" cellpadding="6" width="100%" >
         <!--<tr>-->
-            <!--<td><img src="/openmrs/moduleResources/mohbilling/images/rwanda-logo.jpg" align="left"-->
-                     <!--height="65" ></img>-->
-                <!--<b>REPUBLIC OF RWANDA-->
-                    <!--<br />MINISTRY OF HEALTH</b>-->
-            <!--</td>-->
-            <!--<td><strong> RWANDA MEDICAL CERTIFICATE OF CAUSE OF DEATH</strong><br/>-->
-                <!--<b> IMB ID: <lookup class="value"-->
-                                    <!--expression="patientIdentifiers.get(&quot;IMB ID&quot;)" /> <lookup class="value"-->
-                                                                                                       <!--expression="patientIdentifiers.get(&quot;IMB Primary Care Registration ID&quot;)" /></b>-->
-                <!--<br/>-->
-                <!--Nom / Last name: <lookup class="value" expression="patient.personName.familyName" />-->
-                <!--&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-->
-                <!--Prénom/ First name: <lookup class="value" expression="patient.personName.givenName" />-->
-            <!--</td>-->
+        <!--<td><img src="/openmrs/moduleResources/mohbilling/images/rwanda-logo.jpg" align="left"-->
+        <!--height="65" ></img>-->
+        <!--<b>REPUBLIC OF RWANDA-->
+        <!--<br />MINISTRY OF HEALTH</b>-->
+        <!--</td>-->
+        <!--<td><strong> RWANDA MEDICAL CERTIFICATE OF CAUSE OF DEATH</strong><br/>-->
+        <!--<b> IMB ID: <lookup class="value"-->
+        <!--expression="patientIdentifiers.get(&quot;IMB ID&quot;)" /> <lookup class="value"-->
+        <!--expression="patientIdentifiers.get(&quot;IMB Primary Care Registration ID&quot;)" /></b>-->
+        <!--<br/>-->
+        <!--Nom / Last name: <lookup class="value" expression="patient.personName.familyName" />-->
+        <!--&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-->
+        <!--Prénom/ First name: <lookup class="value" expression="patient.personName.givenName" />-->
+        <!--</td>-->
         <!--</tr>-->
         <!--<tr>-->
-            <!--<td>Clinique / Clinic: <encounterLocation />-->
-            <!--</td>-->
-            <!--<td>Date: <encounterDate id="encounterDate" default="today" /> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-->
+        <!--<td>Clinique / Clinic: <encounterLocation />-->
+        <!--</td>-->
+        <!--<td>Date: <encounterDate id="encounterDate" default="today" /> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-->
 
-                <!--<br/>-->
-                <!--Provider:<encounterProvider id="encounterProvider"-->
-                                            <!--role="Provider" />-->
-            <!--</td>-->
+        <!--<br/>-->
+        <!--Provider:<encounterProvider id="encounterProvider"-->
+        <!--role="Provider" />-->
+        <!--</td>-->
         <!--</tr>-->
 
         <tr>
@@ -314,10 +361,10 @@
                 <img src="/openmrs/moduleResources/mohbilling/images/rwanda-logo.jpg" align="left" height="65"/>
 
                 <b>REPUBLIC OF RWANDA
-                <br />MINISTRY OF HEALTH</b>
+                    <br />MINISTRY OF HEALTH</b>
             </td>
             <td>
-               <strong> RWANDA MEDICAL CERTIFICATE OF CAUSE OF DEATH </strong>
+                <strong> RWANDA MEDICAL CERTIFICATE OF CAUSE OF DEATH </strong>
 
             </td>
             <td>
@@ -371,7 +418,7 @@
 
             <tr>
                 <td>
-                     1)
+                    1)
                     <br/>
                     <p>
                         Report disease or condition directly leading to death on line a
@@ -536,7 +583,7 @@
             </tr>
             <tr>
 
-                    <td class="checkboxGroup" colspan="3">
+                <td class="checkboxGroup" colspan="3">
                         <span id="checkboxRadio">
                             <obs conceptId="$@Manner_of_death@" answerConceptId="$@Disease@" answerLabel="Disease" style="checkbox"/>
                             &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
@@ -559,11 +606,215 @@
                             &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                             <obs conceptId="$@Manner_of_death@" answerConceptId="$@UNKNOWN@" answerLabel="UNKNOWN" style="checkbox"/>
                         </span>
-                    </td>
+                </td>
 
             </tr>
+            <tr>
+                <td>
+                    If external cause or poisoning:
+                    <obs conceptId="$@external_cause_or_poisoning@"/>
+                </td>
+                <td colspan="2">
+                    Date of injury:
+                    <obs conceptId="$@Date_of_injury@"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Please describe how external cause occurred (If
+                    poisoning please specify poisoning agent)
+                </td>
+                <td>
+                    <obs conceptId="$@how_did_external_cause_occur@" cols="80"/>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    Place of occurrence of the external cause:
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@Home@" answerLabel="At Home" style="checkbox"/>
+                    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@Residential_institution@" answerLabel="Residential institution" style="checkbox"/>
+                    &#160;
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@School_other_institution_public_administrative_area@"
+                         answerLabel="School_other_institution_public_administrative_area" style="checkbox"/>
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@Sports_and_athletics_area@" answerLabel="Sports and athletics area" style="checkbox"/>
+                    <br/>
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@Street_and_highway@" answerLabel="Street and highway" style="checkbox"/>
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@Trade_and_service_area@" answerLabel="Trade and service area" style="checkbox"/>
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@Industrial_and_construction_area@" answerLabel="Industrial and construction area" style="checkbox"/>
+                    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    &#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@Farm@" answerLabel="Farm" style="checkbox"/>
+                    <br/>
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@Other_place@" answerLabel="Other place(please specify):" style="checkbox"/>
+                    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    <obs conceptId="$@Other_place@" cols="60"/>
+                    &#160;&#160;&#160;&#160;&#160;
+                    <obs conceptId="$@Place_of_occurrence_of_the_external_cause@" answerConceptId="$@UNKNOWN@" answerLabel="UNKNOWN" style="checkbox"/>
+
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <strong>Fetal or Infant Death</strong>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Multiple pregnancy
+                </td>
+                <td colspan="2">
+                    <obs conceptId="$@Multiple_pregnancy@"
+                         answerConceptIds="$@YES@,$@NO@,$@UNKNOWN@" answerLabels="Yes,No,Unknown" style="radio"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Stillborn?
+                </td>
+                <td colspan="2">
+                    <obs conceptId="$@Stillborn@"
+                         answerConceptIds="$@YES@,$@NO@,$@UNKNOWN@" answerLabels="Yes,No,Unknown" style="radio"/>
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    If death within 24h specify number of hours survived:
+                    <obs conceptId="$@number_of_hours_survived@"/>
+                </td>
+
+                <td colspan="2">
+                    Birth weight:
+                    &#160;&#160;
+                    <obs conceptId="$@Birth_weight@"/> Grams
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Number of completed weeks of pregnancy:
+                    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    <obs conceptId="$@completed_weeks_of_pregnancy@"/>
+                </td>
+
+                <td colspan="2">
+                    Age of mother:
+                    <obs conceptId="$@Age_of_mother@"/>Years
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    if death was perinatal,please state conditions of mother that affected the fetus and new born
+                </td>
+                <td colspan="2">
+                    <obs conceptId="$@conditions_of_mother_that_affected_the_fetus_and_new_born@" cols="70"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    For women,was the deceased pregnant?
+                </td>
+                <td colspan="2">
+                    <obs conceptId="$@deceased_pregnant?@"
+                         answerConceptIds="$@YES@,$@NO@,$@UNKNOWN@" answerLabels="Yes,No,Unknown" style="radio"/>
+                </td>
+            </tr>
+            <tr>
+
+
+                <td class="checkboxGroup" colspan="3">
+                        <span id="checkboxRadio">
+                            <obs conceptId="$@time_of_pregnancy_in_relation_to_death@" answerConceptId="$@at_time_of_death@" answerLabel="At time of death" style="checkbox"/>
+                            &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                            <obs conceptId="$@time_of_pregnancy_in_relation_to_death@" answerConceptId="$@Between_43days_to_1_year_before_death@" answerLabel="Between 43 days up to 1 year before death" style="checkbox"/>
+                            <obs conceptId="$@time_of_pregnancy_in_relation_to_death@" answerConceptId="$@within_42days_before_death@" answerLabel="Within 42 days before to death" style="checkbox"/>
+                            &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+
+                            <obs conceptId="$@time_of_pregnancy_in_relation_to_death@" answerConceptId="$@UNKNOWN@" answerLabel="Unknown" style="checkbox"/>
+
+                           </span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Did the pregnancy contribute to the death?
+                </td>
+                <td colspan="2">
+                    <obs conceptId="$@pregnancy_contribute_to_the_death?@"
+                         answerConceptIds="$@YES@,$@NO@,$@UNKNOWN@" answerLabels="Yes,No,Unknown" style="radio"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Reffered from (level of care)
+                    <obs conceptId="$@TRANSFER_IN_FROM@"/> <br/>
+
+                    Parity
+                    <obs conceptId="$@PARITY@"/>
+
+                </td>
+                <td colspan="2" >
+                    Mode of delivery:
+                    <obs conceptId="$@METHOD_OF_DELIVERY@"
+                         answerConceptIds="$@SPONTANEOUS_VAGINAL_DELIVERY@,$@VACUUM_DELIVERY@,$@CESAREAN_SECTION@" answerLabels="SVD,Assisted,Cesarean" style="radio"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="checkboxGroup">
+                    <span id="checkboxRadio">
+                    Place of Delivery:
+                    <obs conceptId="$@place_of_delivery@"
+                         answerConceptId="$@Health_Facility_Coded_Answer@" answerLabel="Health Facility" style="checkbox"/>
+                    <obs conceptId="$@place_of_delivery@"
+                         answerConceptId="$@home@" answerLabel="Home" style="checkbox"/>
+                    <obs conceptId="$@place_of_delivery@"
+                         answerConceptId="$@In_transit@" answerLabel="In transit" style="checkbox"/><br/>
+                    <obs conceptId="$@place_of_delivery@"
+                         answerConceptId="$@UNKNOWN@" answerLabel="Don't Know" style="checkbox"/>
+                    </span>
+                </td>
+                <td >
+                    Delivered by skilled attendant:
+                    <obs conceptId="$@delivered_by_skilled_attendant@"
+                         answerConceptIds="$@YES@,$@NO@,$@UNKNOWN@" answerLabels="Yes,No,Don't know" style="radio"/>
+                </td>
+            </tr>
+
+
+
         </table>
     </section>
+    <table>
+        <tr>
+            <td colspan="3">
+                <strong> Declaration</strong>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                I hereby certify that (tick as appropriate)
+            </td>
+            <td >
+                <obs conceptId="$@I_hereby_certify_that@"
+                     answerConceptId="$@I_attended_the_deceased_before_death@"
+                     answerLabel="I attended the deceased before death" style="checkbox"/> <br/>
+                <obs conceptId="$@I_hereby_certify_that@"
+                     answerConceptId="$@I_examined_the_body_after_death@"
+                     answerLabel="I examined the body after death" style="checkbox"/> <br/>
+                <obs conceptId="$@I_hereby_certify_that@"
+                     answerConceptId="$@I_conducted_the_post_mortem_of_the_body@"
+                     answerLabel="I conducted the post mortem of the body" style="checkbox"/>  <br/>
+                <obs conceptId="$@I_hereby_certify_that@"
+                     answerConceptId="$@I_conducted_the_post_mortem_of_the_body@"
+                     answerLabel="Other (specify)" style="checkbox"/> :
+                 <obs conceptId="$@Other_that_i_certify@"/>
+            </td>
+        </tr>
+    </table>
     <br />
     <center>
         <submit />
